--- a/www/index.html
+++ b/www/index.html
@@ -6,9 +6,7 @@
   </head>
   <body>
   	Hello World
-    <div id="react-app"></div>
-
-    <script src="https://cdn.jsdelivr.net/react/0.14.0-rc1/react.js"></script>
-    <script src="https://cdn.jsdelivr.net/react/0.14.0-rc1/react-dom.js"></script>
+    <div id="mount"></div>
+    <script src="/bundle.js" ></script>
   </body>
 </html>
