--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,7 @@
     <title>I'm in a React app!</title>
   </head>
   <body>
-  	Hello World
-    <div id="mount"></div>
+    <div id="react-app"></div>
     <script src="/bundle.js" ></script>
   </body>
 </html>
